# SnakeAI

./: CMakeLists.txt  README.md
include/: Board.h  Direction.h  GameCtrl.h  Point.h  Pos.h  Snake.h  SnakeManager.h  util.h
include/model/: Direction.h  Map.h  Point.h  Pos.h  Snake.h
include/util/: Console.h  util.h
src/: Board.cpp  Draw.cpp  Food.cpp  GameCtrl.cpp  KeyEvent.cpp  Point.cpp  Pos.cpp  Snake.cpp  SnakeManager.cpp  main.cpp
src/model/: Map.cpp  Point.cpp  Pos.cpp  Snake.cpp
src/util/: Console.cpp
